--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div id="area-deslizante">
 
                 <div class="conteudoDicas" id="conteudo01">
-                    <div id="imgGelo"></div>
+                    <div class="imgDicasConfig" id="imgGelo"></div>
                     <div class="details">
                         <h3 class="menor">Sem água</h3>
                         <H3>GELADA</H3>
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="conteudoDicas" id="conteudo02">
-                    <div id="imgTimer"></div>
+                    <div class="imgDicasConfig" id="imgTimer"></div>
                     <div class="details">
                         <h3 class="menor">Ative os</h3>
                         <h3>LEMBRETES</h3>
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="conteudoDicas" id="conteudo03">
-                    <div id="imgSqueezes"></div>
+                    <div class="imgDicasConfig" id="imgSqueezes"></div>
                     <div class="details">
                         <h3 class="menor">Glup, Glup</h3>
                         <h3>FLUXO</h3>
