--- a/index.html
+++ b/index.html
@@ -97,27 +97,27 @@
                 <div class="conteudoDicas" id="conteudo01">
                     <div class="imgDicasConfig" id="imgGelo"></div>
                     <div class="details">
-                        <h3 class="menor">Sem água</h3>
-                        <H3>GELADA</H3>
-                        <p>Traz saciedade, mas não te hidrata. 😟</p>
+                        <h3 class="menor">sem água</h3>
+                        <H3 class="maior">GELADA</H3>
+                        <p class="pDicas">Traz saciedade, mas não te hidrata. 😟</p>
                     </div>
                 </div>
 
                 <div class="conteudoDicas" id="conteudo02">
                     <div class="imgDicasConfig" id="imgTimer"></div>
                     <div class="details">
-                        <h3 class="menor">Ative os</h3>
-                        <h3>LEMBRETES</h3>
-                        <p>Use o App para se <strong>lembrar</strong> de hidratar-se! ⏲️</p>
+                        <h3 class="menor">ative os</h3>
+                        <h3 class="maior">LEMBRETES</h3>
+                        <p class="pDicas">Use o App para se <strong>lembrar</strong> de hidratar-se! ⏲️</p>
                     </div>
                 </div>
 
                 <div class="conteudoDicas" id="conteudo03">
                     <div class="imgDicasConfig" id="imgSqueezes"></div>
                     <div class="details">
-                        <h3 class="menor">Glup, Glup</h3>
-                        <h3>FLUXO</h3>
-                        <p>A "frequência" do Glup te ajudará ou atrapalhará! 😅</p>
+                        <h3 class="menor">glup, glup</h3>
+                        <h3 class="maior">FLUXO</h3>
+                        <p class="pDicas">A "frequência" do Glup te ajudará ou atrapalhará! 😅</p>
                     </div>
                 </div>
 
