--- a/index.html
+++ b/index.html
@@ -117,11 +117,15 @@
                     <div class="details">
                         <h3 class="menor">glup, glup</h3>
                         <h3 class="maior">FLUXO</h3>
-                        <p class="pDicas">A "frequência" do Glup te ajudará ou atrapalhará! 😅</p>
+                        <p class="pDicas">A "frequência" do <em>Glup</em> te ajudará ou atrapalhará! 😅</p>
                     </div>
                 </div>
 
             </div>
+        </section>
+
+        <section class="aba2" id="calcule">
+            
         </section>
     </main>
     <footer>
