--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
                     <label for="min" class="down">Você bebe o mínimo de 2 litros diariamente?</label>
                     <input type="radio" name="min" id="minimoSim" checked>
                     <input type="radio" name="min" id="minimoNao">
+
+                    <input type="submit" value="Receber Guia Prático">
                 </form>
             </div>
         </section>
