--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <p class="downloads-restantes">RESTANTES: 100 UNIDADES</p>
                 </div>
             </div>
-            
+            <hr>
             <p id="acesse">acesse agora:</p>
 
             <div id="formDownload">
@@ -250,15 +250,16 @@
     </main>
 
     <footer>
-        <div class="aba2">
+        <div class="aba">
             <div id="imgSentado"></div>
             <div class="info">
                 <h6>obrigadu!</h6>
-                <p>Siga nosso Instagram!</p>
-                <p>Entre em contato conosco por e-mail!</p>
+                <p class="txt" id="txtFooter">Siga nosso Instagram! <br> Entre em contato conosco por e-mail!</p>
                 
-                <button id="email"><a href="#email"></a></button>
-                <button id="instagram"><a href="#instagram"></a></button>
+                <div class="btSocial">
+                    <button class="social" id="email"></a></button>
+                    <button class="social" id="instagram"><a href="#instagram"></a></button>
+                </div>
             </div>
         </div>
     </footer>
