--- a/index.html
+++ b/index.html
@@ -254,12 +254,7 @@
             <div id="imgSentado"></div>
             <div class="info">
                 <h6>obrigadu!</h6>
-                <p class="txt" id="txtFooter">Siga nosso Instagram! <br> Entre em contato conosco por e-mail!</p>
-                
-                <div class="btSocial">
-                    <button class="social" id="email"></a></button>
-                    <button class="social" id="instagram"><a href="#instagram"></a></button>
-                </div>
+                <p id="txtFooter">Vem com a gente!❤️</p>
             </div>
         </div>
     </footer>
