--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     </footer>
     
     <div id="space"></div>
-    <script src="/js/menu.js"></script>
+    <script src="menu.js"></script>
     <script src="/js/number.js"></script>
     <script src="/js/inputsJuntos.js"></script>
     <script src="js/barraRestante.js"></script>
