--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
     </footer>
     
     <div id="space"></div>
-    <script src="menu.js"></script>
-    <script src="/js/number.js"></script>
-    <script src="/js/inputsJuntos.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/number.js"></script>
+    <script src="js/inputsJuntos.js"></script>
     <script src="js/barraRestante.js"></script>
     <script src="js/formatoTel.js"></script>
 </body>
