teste de link do menu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </span>
             </div>
             <ul>
-                <li><a href="#">DICAS</a></li>
-                <li><a href="#">CALCULE</a></li>
-                <li><a href="#">GUIA PRÁTICO</a></li>
+                <li><a href="#dicas">DICAS</a></li>
+                <li><a href="#calcula">CALCULE</a></li>
+                <li><a href="#guia">GUIA PRÁTICO</a></li>
             </ul>
         </menu>
         <section id="header">
@@ -265,5 +265,6 @@
     <script src="js/inputsJuntos.js"></script>
     <script src="js/barraRestante.js"></script>
     <script src="js/formatoTel.js"></script>
+    <script src="js/calculadora.js"></script>
 </body>
 </html>
