--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
             <hr>
 
             <div id="divLitros">
-                <h5 id="meta">Sua meta é de 2 litros d'água!</h5>
+                <h5 id="meta">Sua meta é de 2.2 litros <br> de água por dia!</h5>
             </div>
 
 
             <div id="garrafas">
                 <div id="calculado">
-                    <p id="squee">beba 4 garrafas de 500<small>ml</small></p>
+                    <p id="squee">beba 5 garrafas de 500<small>ml</small></p>
                 </div>
             </div>
         </section>
