--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="divInput" id="obstinado">
                     <div class="titulosInputs">
                         <p class="inputs">Modo Obstinado</p>
-                        <button class="tooltip" title="Modo obstinado é indicado para quem já atinge o mínimo de 2 litros diários e quer intensificar a hidratação!">?</button>
+                        <button class="tooltip" title="Modo obstinado é indicado para quem já atinge o mínimo de 2 litros diários e quer intensificar a hidratação! Indicado para pessoas em dieta!">?</button>
                     </div>
 
                     <div class="primeiroRadio">
