--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="infos">
                 <h1>BEBA + ÁGUA</h1>                
                 <p class="txt" id="t01">Mantenha-se hidratado: <strong>Dicas simples</strong> e eficazes para beber mais água todos os dias! 💧</p>
-                <button class="home" id="b01">DIIICAS</button>
+                <a href="#dicas" class="home" id="b01">DIIICAS</a>
             </div>
 
             <div class="imagem"></div>
@@ -79,8 +79,8 @@
 
             <div class="infos" id="mattoi">
                 <h2>Oieee!</h2>
-                <p class="txt" id="oi">Me chamo Matt e vamos entender como você pode tomar 2x mais água e ficar super hidratado!</p>
-                <button class="home" id="b02">CALCULE O MÍNIMO</button>
+                <p class="txt" id="oi">Me chamo <strong>Matt</strong> e vou te mostrar como bebo <strong>7 litros de água diariamente</strong> e como você pode alcançar a sua meta! 🎯</p>
+                <a href="#calcula" class="home" id="b02">CALCULE A META</a>
             </div>
         </section>
 
