--- a/index.html
+++ b/index.html
@@ -34,12 +34,9 @@
             <div id="central">
             </div>
 
-            <div class="extremidade" id="divContador">
+            <div title="Quantidade de pessoas que têm aumentado sua hidratação com base em nossas dicas! :&#41;" class="extremidade" id="divContador">
                 <p class="cont">1.1K</p>
-                <!-- <img id="contador" src="imagens/galeraVerdeEscuro.png" alt="pessoas"> -->
-                <span class="material-symbols-outlined">
-                    group
-                </span>
+                <span class="material-symbols-outlined">group</span>
             </div>
 
         </section>
